--- a/src/components/theheader.module.css
+++ b/src/components/theheader.module.css
@@ -2,7 +2,22 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 84px;
+  height: 62px;
+  box-sizing: border-box;
+}
+
+.header > * {
+  margin-right: 12px;
+}
+
+.header > *:last-child {
+  margin-right: 0;
+}
+
+.logo a {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .menu {
@@ -20,19 +35,32 @@
   line-height: 160%;
 }
 
+.search {
+  flex-grow: 1;
+  min-width: 150px;
+  max-width: 350px;
+}
+
 .search input {
   border-radius: 4px;
   border: 1px solid var(--gray-400, #d7dadd);
   background: var(--white, #fff);
 
   display: flex;
-  width: 380px;
-  /* height: 44px; */
+  width: 100%;
   padding: 11px 16px 12px 16px;
   justify-content: center;
   align-items: center;
-  gap: 202px;
   flex-shrink: 0;
+}
+
+.search input::placeholder {
+  color: var(--gray-600, #9a9ca5);
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
 }
 
 .toolbar {
@@ -56,18 +84,17 @@
   );
 }
 
-.toolbar div {
+.toolbar > * {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
-.toolbar a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+.toolbar a img {
+  margin-right: 8px;
 }
 
-.toolbar a div {
+.toolbar a:last-child div {
   display: flex;
   padding: 1px 8px;
   align-items: center;
