--- a/src/components/catalog.module.css
+++ b/src/components/catalog.module.css
@@ -148,7 +148,7 @@
   display: inline-block;
   width: 100%;
   height: 100%;
-  background-image: url("http://localhost:3000/heart.svg");
+  background-image: url("/heart.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -156,5 +156,5 @@
   cursor: pointer;
 }
 .card-favorite:hover .heart-icon {
-  background-image: url("http://localhost:3000/heartRed.svg");
+  background-image: url("/heartRed.svg");
 }
