--- a/src/components/theheader.module.css
+++ b/src/components/theheader.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   height: 62px;
   box-sizing: border-box;
+  padding: 0 250px;
 }
 
 .header > * {
@@ -28,7 +29,6 @@
 
 .menu a {
   color: var(--gray-800, #424551);
-  font-family: Lato;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
@@ -56,7 +56,6 @@
 
 .search input::placeholder {
   color: var(--gray-600, #9a9ca5);
-  font-family: Lato;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -66,10 +65,10 @@
 .toolbar {
   display: inline-flex;
   align-items: center;
-  gap: 20px;
 }
 
 .toolbar a::before {
+  margin: 10px;
   content: "";
   display: block;
   width: 1px;
