--- a/src/components/thefooter.module.css
+++ b/src/components/thefooter.module.css
@@ -16,7 +16,7 @@
   gap: 4px;
 }
 
-footer > div > h3 {
+.footer > div > h3 {
   color: var(--white, #fff);
   font-size: 16px;
   font-style: normal;
@@ -27,7 +27,7 @@ footer > div > h3 {
   margin-bottom: 4px;
 }
 
-footer > div > a {
+.footer > div > a {
   color: var(--white, #fff);
   /* base/regular */
   font-size: 16px;
@@ -37,7 +37,7 @@ footer > div > a {
   opacity: 0.6;
 }
 
-footer > div > div {
+.footer > div > div {
   color: var(--white, #fff);
   /* base/regular */
   font-size: 16px;
