--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: Lato, Arial, sans-serif;
   font-style: normal;
 }
@@ -11,6 +13,7 @@ body {
 
 html,
 body {
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
