--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   font-family: Lato, Arial, sans-serif;
   font-style: normal;
 }
