--- a/src/components/theheader.module.css
+++ b/src/components/theheader.module.css
@@ -66,6 +66,7 @@
 .toolbar {
   display: inline-flex;
   align-items: center;
+  min-width: 80px;
 }
 
 .toolbar a::before {
@@ -88,6 +89,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .toolbar a img {
