--- a/src/components/cart/cartitem.module.css
+++ b/src/components/cart/cartitem.module.css
@@ -40,18 +40,6 @@
   line-height: 150%;
 }
 
-/* Chrome, Safari, Edge, Opera */
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type="number"] {
-  appearance: textfield;
-}
-
 .item-count {
   display: flex;
   position: relative;
@@ -60,7 +48,7 @@ input[type="number"] {
 .item-count input {
   display: flex;
   text-align: center;
-  padding: 12%;
+  padding: 10%;
   width: 42px;
   height: 24px;
 
@@ -112,6 +100,7 @@ input[type="number"] {
 
 .item-price {
   color: var(--gray-800, #424551);
+  min-width: 90px;
   text-align: right;
   font-size: 16px;
   font-style: normal;
@@ -123,7 +112,7 @@ input[type="number"] {
 
 .item-actions {
   display: flex;
-  align-items: baseline;
+  justify-content: flex-end;
   gap: 8px;
 }
 
