--- a/src/components/cart/CartItem/cartitem.module.css
+++ b/src/components/cart/CartItem/cartitem.module.css
@@ -1,43 +1,12 @@
+.item__container {
+  border-top: 1px solid rgba(204, 214, 228, 0.6);
+  padding: 16px 0px;
+}
+
 .item {
   display: flex;
-  gap: 24px;
-  position: relative;
-}
-
-.item::after {
-  position: absolute;
-  bottom: -24px;
-  left: 0;
-  margin: 10px;
-  content: "";
-  display: block;
-  width: 540px;
-  height: 1px;
-  background: linear-gradient(
-    315deg,
-    rgba(218, 219, 221, 0) 0%,
-    rgba(218, 219, 221, 0.5) 12.33%,
-    #dadbdd 51.91%,
-    rgba(218, 219, 221, 0.5) 87.85%,
-    rgba(218, 219, 221, 0) 100%
-  );
-}
-
-.item div img {
-  border-radius: 4px;
-}
-
-.item > div:first-child::after {
-  background-color: brown;
-}
-
-.item-info {
-  width: 210px;
-  color: var(--gray-900, #1e212c);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .item-count {
@@ -57,11 +26,10 @@
   flex-shrink: 0;
 
   border-radius: 4px;
-  border: 1px solid var(--gray-400, #d7dadd);
-  background: var(--white, #fff);
+  border: 1px solid  #d7dadd;
+  background:  #fff;
 }
 
-/* - + */
 .item-count button:first-child,
 .item-count button:last-child {
   width: 24px;
@@ -99,7 +67,7 @@
 }
 
 .item-price {
-  color: var(--gray-800, #424551);
+  color:  #424551;
   min-width: 90px;
   text-align: right;
   font-size: 16px;
