--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -1,9 +1,17 @@
+.layout__container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 .layout__header {
   max-width: 1230px;
   margin: 0 auto;
+  width: 100%;
 }
 
 .layout__main {
   max-width: 1230px;
   margin: 0 auto;
+  flex-grow: 1;
 }
