--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -11,8 +11,11 @@
 }
 
 .layout__main {
+  flex-grow: 1;
+}
+
+.layout__footer {
   max-width: 1230px;
   margin: 0 auto;
   width: 100%;
-  flex-grow: 1;
 }
