--- a/src/components/catalog/catalog.module.css
+++ b/src/components/catalog/catalog.module.css
@@ -1,18 +1,51 @@
-.breadcrumb {
+.catalog {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.breadcrumb__container {
+  background: #f4f5f6;
+}
+
+.breadcrumb__wrapper {
   display: flex;
   justify-content: space-between;
   padding: 16px;
+  max-width: 1230px;
+  margin: 0 auto;
+  width: 100%;
 }
 
-.activeFilters {
+.breadcrumb__list {
+  display: flex;
+  flex-direction: row;
+}
+
+.activeFilters__list {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
 }
 
-.activeFilters button {
+.activeFilters {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
   border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.activeFilters span {
+  display: flex;
+  color: #9a9ca5;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
 }
 
 .toolbar {
@@ -20,18 +53,17 @@
 }
 
 .mainWrapper {
-  box-sizing: border-box;
   display: flex;
-  flex-wrap: nowrap;
   gap: 60px;
+  max-width: 1230px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .filterList {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-
-  flex-grow: 1;
 }
 
 .productList {
@@ -40,6 +72,5 @@
   justify-content: flex-start;
 
   flex-grow: 1;
-  box-sizing: border-box;
   gap: 20px;
 }
