--- a/src/components/catalog/product/product.module.css
+++ b/src/components/catalog/product/product.module.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  border-radius: 12px;
+  border-radius: 10px;
   max-width: 285px;
+  max-height: 450px;
   flex-grow: 1;
   background-color: #f2f2f2;
   box-sizing: border-box;
@@ -18,14 +19,14 @@
 }
 
 .product > a {
-  border-radius: 12px;
+  border-radius: 10px;
 }
 
 .product img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
-  border-radius: 12px;
+  border-radius: 10px;
   transition: transform 0.3s ease-in-out;
   display: block;
   width: auto;
