--- a/src/components/footer/thefooter.module.css
+++ b/src/components/footer/thefooter.module.css
@@ -1,12 +1,18 @@
+.footer_container {
+  background: #1e212c;
+}
+
 .footer {
   margin-top: auto;
   width: 100%;
   flex-shrink: 0;
-  background: var(--gray-900, #1e212c);
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  padding: 0 250px;
+
+  max-width: 1230px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .footer > div {
