--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -1,3 +1,9 @@
+.cart__wrapper {
+  max-width: 1230px;
+  margin: 0 auto;
+  width: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
