--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,138 +1,5 @@
-.top_slider_container {
-  position: relative;
-  width: 100%;
-  height: 800px;
-  overflow: hidden;
-}
-
-.top_slider_item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  transition: opacity 0.5s ease;
-}
-
-.top_slider__info__wrapper {
-  position: absolute;
-  top: 140px;
-  width: 100%;
-  color: #fff;
-  text-align: center;
-}
-
-.top_slider__info {
+.container {
   display: flex;
   flex-direction: column;
-  gap: 60px;
-  max-width: 1230px;
-  margin: 0 auto;
-  width: 100%;
-}
-
-.top_slider__info__subtitle {
-  color: #1e212c;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  text-align: left;
-}
-
-.top_slider__info__title {
-  color: #1e212c;
-  font-size: 72px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 130%;
-  letter-spacing: 1px;
-  text-align: left;
-}
-
-.top_slider_buttons {
-  display: inline-flex;
-  gap: 24px;
-}
-
-.top_slider_buttons__sub {
-  display: flex;
-  padding: 0px 40px;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  border-radius: 4px;
-  border: 1px solid #17696a;
-  cursor: pointer;
-}
-
-.top_slider_buttons__sub span {
-  color: #17696a;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 52px;
-  letter-spacing: 0.5px;
-}
-
-.top_slider_buttons__main {
-  display: flex;
-  padding: 0px 40px;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  border-radius: 4px;
-  background: #17696a;
-  border: none;
-  cursor: pointer;
-}
-
-.top_slider_buttons__main span {
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 52px;
-  letter-spacing: 0.5px;
-}
-
-.top_slider__pager__wrapper {
-}
-
-.top_slider__btn__wrapper {
-  width: 100%;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-}
-
-.top_slider__btn {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 32px;
-}
-
-.top_slider__btn__shape {
-  position: relative;
-  width: 48px;
-  height: 48px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  display: none;
-}
-
-.top_slider_container:hover .top_slider__btn__shape{
-    display: block;
-}
-
-.top_slider__btn__image {
-  position: absolute;
-  top: 12px;
-  left: 12px;
+  gap: 180px;
 }
