--- a/src/components/catalog/product/product.module.css
+++ b/src/components/catalog/product/product.module.css
@@ -1,45 +1,49 @@
-.product {
+.card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
   border-radius: 10px;
   max-width: 285px;
-  max-height: 450px;
+  height: 444px;
   flex-grow: 1;
-  background-color: #f2f2f2;
   box-sizing: border-box;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
-.product:hover {
+.card:hover {
   box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05),
     0px 12px 10px -6px rgba(154, 156, 165, 0.08),
     0px 30px 24px -10px rgba(154, 156, 165, 0.1),
     0px 80px 80px -20px rgba(154, 156, 165, 0.16);
 }
 
-.product > a {
+.card__link {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   border-radius: 10px;
 }
 
-.product img {
+.card__img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+  object-position: center;
   border-radius: 10px;
   transition: transform 0.3s ease-in-out;
   display: block;
   width: auto;
 }
 
-.card-body {
+.card__body {
   flex-grow: 1;
   padding: 11px 16px;
 }
 
-.card-body a {
+.card__title {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -51,7 +55,22 @@
   line-height: 150%;
 }
 
-.card-footer {
+.card__description {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+
+  color: #787a80;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+
+  overflow: hidden;
+  cursor: default;
+}
+
+.card__footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -63,7 +82,7 @@
   border-radius: 0 0 12px 12px;
 }
 
-.card-footer div {
+.card__price {
   display: flex;
   text-align: center;
   color: #1e212c;
@@ -72,20 +91,16 @@
   font-weight: 700;
   line-height: 130%;
   white-space: nowrap;
+  cursor: default;
 }
 
-.card-footer button {
-  display: flex;
-  align-items: center;
-  padding: 0px 16px;
-  gap: 8px;
-  white-space: nowrap;
-
+.card__btn_tocart {
+  padding: 0 16px;
   border-radius: 4px;
   background: #17696a;
+  opacity: 0;
 
   color: #fff;
-  text-align: center;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -94,35 +109,67 @@
 
   cursor: pointer;
   border: none;
+  transition: transform 0.3s ease, opacity 0.3s ease-in-out;
 }
 
-.card-footer button:hover {
+.card__btn_tocart:hover {
   background: #145c5d;
 }
 
-.card-footer button:active {
+.card__btn_tocart:active {
   background: #145c5d;
+  transform: scale(0.95);
 }
 
-.card-favorite {
+.card__favorite__container {
   position: absolute;
-  width: 20px;
-  height: 20px;
-
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #fff;
   right: 12px;
   top: 12px;
+  cursor: pointer;
+  opacity: 0;
+
+  transition: opacity 0.3s ease-in-out;
 }
-.heart-icon {
-  display: inline-block;
+
+.card:hover .card__favorite__container,
+.card:hover .card__btn_tocart {
+  opacity: 1;
+}
+
+.card__favorite {
+  position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 50%;
+}
+
+.card__favorite__form {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  border-radius: 50%;
+}
+
+.card__favorite__icon {
+  position: absolute;
+  display: inline-block;
+  top: 8px;
+  left: 8px;
+  width: 16px;
+  height: 16px;
   background-image: url("/heart.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  transition: background-color 2s ease;
+  transition: background-image 0.3s ease;
   cursor: pointer;
 }
-.card-favorite:hover .heart-icon {
+
+.card__favorite:hover .card__favorite__icon {
   background-image: url("/heartRed.svg");
 }
