--- a/src/app/account/page.module.css
+++ b/src/app/account/page.module.css
@@ -25,10 +25,12 @@
 
 .menu {
   max-width: 285px;
-  flex-grow: 1;
+  height: min-content;
+  width: 100%;
   border-radius: 4px;
   border: 1px solid #e5e8ed;
   background: #fff;
+  width: 100%;
   box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03),
     0px 12px 10px -6px rgba(154, 156, 165, 0.04),
     0px 30px 24px -10px rgba(154, 156, 165, 0.05),
