--- a/src/components/catalog/product/productLarge.module.css
+++ b/src/components/catalog/product/productLarge.module.css
@@ -2,12 +2,19 @@
   border-radius: 4px;
   width: calc(100% / 2 - 30px);
   max-width: 390px;
+  min-height: 561.59px;
   flex-grow: 1;
   box-sizing: border-box;
   position: relative;
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
-  transform-origin: center bottom;
   will-change: transform;
+
+  position: relative;
+  overflow: hidden;
+}
+
+.card:hover {
+  overflow: visible;
 }
 
 .card__wrapper {
@@ -16,7 +23,19 @@
   justify-content: space-between;
 }
 
-.hover{
+.card:hover .card__wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: -1;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.hover {
   z-index: 5;
 }
 
@@ -29,13 +48,16 @@
 
 .card:hover .card__wrapper {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
 }
 
-.card:hover .card__btn_tocart{
-  display: block;
+.card:hover .card__btn_tocart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
 .card__link {
@@ -65,6 +87,15 @@
   gap: 8px;
 }
 
+.card__body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  border-radius: 0 0 4px 4px;
+  padding: 16px;
+  gap: 8px;
+}
+
 .card__title {
   display: -webkit-box;
   -webkit-line-clamp: 1;
@@ -77,6 +108,10 @@
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
+}
+
+.card:hover .card__title {
+  -webkit-line-clamp: 2;
 }
 
 .card__description {
@@ -92,6 +127,10 @@
 
   overflow: hidden;
   cursor: default;
+}
+
+.card:hover .card__description {
+  -webkit-line-clamp: 3;
 }
 
 .card__footer {
@@ -124,8 +163,8 @@
   color: #fff;
   font-size: 14px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 34px;
+  font-weight: 700;
+  line-height: 44px;
   letter-spacing: 0.5px;
 
   cursor: pointer;
@@ -139,7 +178,7 @@
 
 .card__btn_tocart:active {
   background: #145c5d;
-  transform: scale(0.95);
+  transform: scale(0.97);
 }
 
 .card__favorite__container {
