--- a/src/components/catalog/product/productSmall.module.css
+++ b/src/components/catalog/product/productSmall.module.css
@@ -7,7 +7,13 @@
   position: relative;
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
   will-change: transform;
+
   position: relative;
+  overflow: hidden;
+}
+
+.card:hover {
+  overflow: visible;
 }
 
 .card__wrapper {
@@ -16,7 +22,19 @@
   justify-content: space-between;
 }
 
-.hover{
+.card:hover .card__wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: -1;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.hover {
   z-index: 5;
 }
 
@@ -29,13 +47,16 @@
 
 .card:hover .card__wrapper {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
 }
 
-.card:hover .card__btn_tocart{
-  display: block;
+.card:hover .card__btn_tocart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
 .card__link {
@@ -79,6 +100,10 @@
   line-height: 150%;
 }
 
+.card:hover .card__title {
+  -webkit-line-clamp: 2;
+}
+
 .card__description {
   display: -webkit-box;
   -webkit-line-clamp: 1;
@@ -92,6 +117,10 @@
 
   overflow: hidden;
   cursor: default;
+}
+
+.card:hover .card__description {
+  -webkit-line-clamp: 3;
 }
 
 .card__footer {
@@ -117,15 +146,15 @@
 
 .card__btn_tocart {
   display: none;
-  padding: 0 16px;
+  padding: 0 24px;
   border-radius: 4px;
   background: #17696a;
 
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 28px;
+  font-weight: 700;
+  line-height: 36px;
   letter-spacing: 0.5px;
 
   cursor: pointer;
@@ -139,7 +168,7 @@
 
 .card__btn_tocart:active {
   background: #145c5d;
-  transform: scale(0.95);
+  transform: scale(0.97);
 }
 
 .card__favorite__container {
