--- a/src/app/clother/[id]/page.module.css
+++ b/src/app/clother/[id]/page.module.css
@@ -1,7 +1,5 @@
 .page_container {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+
 }
 
 .breadcrumbs_container {
@@ -22,6 +20,7 @@
   max-width: 1230px;
   margin: 0 auto;
   padding: 16px 0;
+  margin-top: 16px;
   width: 100%;
   gap: 105px;
   border-top: 1px solid rgba(204, 214, 228, 0.6);
@@ -32,6 +31,14 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+}
+
+.product_card__title{
+  color:  #1E212C;
+font-size: 46px;
+font-style: normal;
+font-weight: 900;
+line-height: 130%; 
 }
 
 .product_card__price {
@@ -59,67 +66,6 @@
   text-decoration-line: strikethrough;
 }
 
-.product_card__buttons {
-  display: flex;
-  gap: 24px;
-}
-
-.product_card__buttons__toCart {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  width: 244px;
-  padding: 0px 32px;
-  gap: 8px;
-
-  background: #17696a;
-
-  cursor: pointer;
-  border-radius: 4px;
-  border: none;
-}
-
-.product_card__buttons__toCart:hover {
-  background: #145c5d;
-}
-
-.product_card__buttons__toCart span {
-  color: #fff;
-
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 44px;
-  letter-spacing: 0.5px;
-
-  white-space: nowrap;
-}
-
-.product_card__buttons__toFavorite {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  width: 153px;
-  padding: 0px 32px;
-  gap: 10px;
-
-  border-radius: 4px;
-  border: 1px solid #17696a;
-  background-color: #fff;
-
-  color: #17696a;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 44px;
-  letter-spacing: 0.5px;
-
-  cursor: pointer;
-}
 
 .product__info {
   color: #424551;
