--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -1,24 +1,59 @@
-.cart__wrapper {
+.breadcrumbs_container {
+  background: #f4f5f6;
+}
+
+.breadcrumbs_wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
   max-width: 1230px;
   margin: 0 auto;
   width: 100%;
 }
 
-.container {
+.cart__section {
+  padding: 32px 0;
+  border-bottom: 1px solid rgba(204, 214, 228, 0.6);
+}
+
+.subtitle {
+  margin-bottom: 24px;
+  color: #1e212c;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%;
+}
+
+.cart__header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .title {
-  display: flex;
-  justify-content: space-between;
-  padding: 32px 24px;
+  color: #1e212c;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 130%;
+}
+
+.link {
+  color: #17696a;
+  text-align: right;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+  text-decoration-line: underline;
 }
 
 .cart__container {
   display: flex;
+  max-width: 1230px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .cart {
@@ -26,7 +61,6 @@
   flex-direction: column;
   max-width: calc(66.6666% - 24px);
   margin-left: 24px;
-  gap: 32px;
 }
 
 .products {
@@ -52,8 +86,9 @@
 
 .totalPrice__wrapper {
   position: sticky;
-  top: 24px;
+  margin-top: 24px;
   margin-left: 24px;
+  top: 24px;
 }
 
 .totalPrice {
@@ -123,4 +158,28 @@
 
   border: none;
   cursor: pointer;
+}
+
+.addInfo__label {
+  color: #424551;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+  margin-bottom: 8px;
+}
+
+.addInfo__input {
+  display: flex;
+  width: 100%;
+  height: 130px;
+  padding: 13px 16px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #d7dadd;
+  background: #fff;
+
+  resize: none;
+  /*   white-space: pre-wrap;
+  word-wrap: break-word; */
 }
