--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -9,16 +9,19 @@
   overflow-x: hidden;
   overflow-y: scroll;
   margin: 0 auto;
+  scroll-snap-type: y mandatory;
 }
 
 .layout__header {
   max-width: 1230px;
   margin: 0 auto;
   width: 100%;
+  scroll-snap-align: start;
 }
 
 .layout__main {
   flex-grow: 1;
+  scroll-snap-align: start;
 }
 
 .layout__footer {
