--- a/src/components/catalog/catalog.module.css
+++ b/src/components/catalog/catalog.module.css
@@ -1,7 +1,6 @@
 .catalog {
   display: flex;
   flex-direction: column;
-  gap: 32px;
 }
 
 .breadcrumb__container {
@@ -56,8 +55,27 @@
   display: flex;
   gap: 60px;
   max-width: 1230px;
-  margin: 0 auto;
+  margin: 32px auto 0 auto;
   width: 100%;
+}
+
+.fetching {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  margin: 30vh auto;
+  border: 2px dashed #17696a;
+  animation-name: search-ferching;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes search-ferching {
+  100% {
+    transform: rotate(180deg) scale(3);
+  }
 }
 
 .productList {
