--- a/src/components/catalog/product/productLarge.module.css
+++ b/src/components/catalog/product/productLarge.module.css
@@ -2,7 +2,7 @@
   border-radius: 4px;
   width: calc(100% / 2 - 30px);
   max-width: 390px;
-  min-height: 561.59px;
+  min-height: 562px;
   flex-grow: 1;
   box-sizing: border-box;
   position: relative;
@@ -63,28 +63,18 @@
 .card__link {
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: auto;
+  height: auto;
   border-radius: 4px;
 }
 
 .card__img {
   max-width: 100%;
-  max-height: 100%;
   object-fit: cover;
   object-position: center;
   border-radius: 4px;
-  transition: transform 0.3s ease-in-out;
   display: block;
   width: auto;
-}
-
-.card__body {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  border-radius: 0 0 4px 4px;
-  padding: 16px;
-  gap: 8px;
 }
 
 .card__body {
